force-app/main/default/objects/Batch_Settings__c/Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Settings</label>
</CustomObject>