force-app/main/default/objects/Batch_Settings__c/fields/Filter_value__c.field-meta.xml
<CustomField>
    <fullName>Filter_value__c</fullName>
    <description>Filter value for batch</description>
    <label>Filter value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>