force-app/main/default/objects/Batch_Settings__c/fields/No_of_Days_to_add_in_TargetDate__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_to_add_in_TargetDate__c</fullName>
    <label>No of Days to add in TargetDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>