force-app/main/default/objects/Batch_Settings__c/fields/Retries__c.field-meta.xml
<CustomField>
    <fullName>Retries__c</fullName>
    <label>Retries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>